# issue-PY-45660

./: README.md  pyproject.toml
py_45660/: manage.py
py_45660/py_45660/: asgi.py  settings.py  urls.py  wsgi.py
py_45660/py_45660/apps/temp/: celery.py
