[tool.poetry]
name = "issue-py-45660"
version = "0.1.0"
description = ""
authors = ["Łukasz Wolak <lukasz.wolak@theluke.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
celery = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
